--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -145,51 +145,46 @@
     }
 }
 
-
-.btn-facebook {
-    background-color: #2F80ED;
+.btn-redes {
     color: white;
     font-size: 16px;
     font-weight: bold;
-    border: 1px solid #2274FF;
     border-radius: 8px;
-    padding: 1rem 1rem;
+    padding: 0.5rem;
+    display: block;
+    width: 50px;
+    height: 50px;;
+    @include min-screen($tl){
+        width: 100%;
+        height: auto;
+        padding: 1rem;
+    }
     &:hover {
         color:white;
     }
     i {
-        margin-right: 13px;
+        font-size: 20px;
+        @include min-screen($tl){
+            margin-right: 13px;
+        }
     }
+    span {
+        display: none;
+        @include min-screen($tl){
+           display: block;
+        }
+    }
+}
+.btn-facebook {
+    background-color: #2F80ED;
+    border: 1px solid #2274FF;
 }
 
 .btn-google {
     background-color: #DD5D5D;
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
     border: 1px solid #DD5D5D;
-    border-radius: 8px;
-    padding: 1rem 1rem;
-    &:hover {
-        // background-color: #C94747;
-        color:white;
-    }
-    i {
-        margin-right: 13px;
-    }
 }
 .btn-twitter{
     background-color: #71CCFF;
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
     border: 1px solid #71CCFF;
-    border-radius: 8px;
-    padding: 1rem 1rem;
-    i {
-        margin-right: 13px;
-    }
-    &:hover {
-        color:white;
-    }
 }
