--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -120,6 +120,7 @@
     background: #19CE74;
     border-radius: 8px;
     &:hover {
+        color:white;
         background-color: $green-dark;
     }
 }
