--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -334,6 +334,7 @@
             @include min-screen($tl){
                 color: $black-light;
                 font-size: 14px;
+                padding-top: 0;
                 padding-bottom: 0;
             }
             &:hover {
