--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,6 +25,7 @@
 @import 'pages/home';
 @import 'pages/login';
 @import 'pages/recupera-contrasena';
+@import 'pages/restablecer-contrasena';
 
 $bg-coral: coral;
 $bg-gray: #2d2d2d;
