--- a/scss/components/_helpers.scss
+++ b/scss/components/_helpers.scss
@@ -29,8 +29,10 @@ input::placeholder {
 $input-padding-y-lg : 1rem;
 $input-padding-x-lg:  1rem;
 .form-control-lg {
-  padding: $input-padding-y-lg $input-padding-x-lg;;
-}
+  padding: $input-padding-y-lg $input-padding-x-lg;
+  border-radius: 8px;
+  font-size: 16px;
+} 
 
 
 /* form switch toggle */
