--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,7 @@
 @import 'pages/login';
 @import 'pages/recupera-contrasena';
 @import 'pages/restablecer-contrasena';
+@import 'pages/solicitar-boleta';
 
 $bg-coral: coral;
 $bg-gray: #2d2d2d;
